2008-08-16  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/index.html: 
	  small updates on the cheese page

2008-08-05  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  populate the cheese 2.23.6 release

2008-08-03  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: add Boston Summit to the upcoming events

2008-07-24  Rosanna Yuen  <zana@localhost.localdomain>

	* www.gnome.org/friends/donors_2008.wml: Update donor list.

2008-07-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  populate the 2.23.5 cheese release

2008-07-13  Vincent Untz  <vuntz@gnome.org>

	Add PR about GUADEC+Akademy in 2009.

	* www.gnome.org/index.wml: (and remove GUADEC from upcoming event)
	* www.gnome.org/press/releases/2008-07-guadec-akademy-grancanaria.w
	ml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml:

2008-07-09  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/index.wml: update GNOME.Asia paragraph with link

2008-07-07  Vincent Untz  <vuntz@gnome.org>

	Link to the PR, and change the name of the PR file.

	* www.gnome.org/index.wml:
	* www.gnome.org/press/releases/Makefile.am:
	* www.gnome.org/press/releases/index.wml:
	* www.gnome.org/press/releases/stormy_executivedir.wml:

2008-07-06  Dave Neary  <bolsh@gnome.org>

	* www.gnome.org/press/releases/stormy_executivedir.wml: Update press
	release (still unlinked).

2008-07-06  Dave Neary  <bolsh@gnome.org>

	* www.gnome.org/press/releases/stormy_executivedir.wml: Add new press
	release for GUADEC announcement (unlinked for the moment).

2008-07-03  Bastien Nocera  <hadess@hadess.net>

	* configure.in: Add the sony-ericsson-remotes directory
	and subs

2008-06-30  Sebastian Pölsterl  <sebp@cvs.gnome.org>

	* www.gnome.org/projects/index.wml:
	Added link to Deskbar-Applet site
