@@ -137,10 +137,34 @@
         <div id="bottomRight">
           <h2>News</h2>
 
+          <h3>August 18th 2008</h3>
+          <p>
+          <b>Unstable</b>
+          version 2.23.90 was released!
+          New in this release
+          </p>
+          <ul>
+            <li>don't start cheese twice if another instance is running, but focus the running window</li>
+            <li>fancy up the cheese window with some alignment stuff</li>
+            <li>select the last thumbnail item, if the last one was deleted</li>
+            <li>remove a thumbnail item immidiately from the thumbnail row if it was deleted</li>
+            <li>use the eog scrollbar for cheese thumbnails</li>
+            <li>give a detailed error message if some gstreamer element is missing</li>
+            <li>added a delete action to immediately delete files and a gconf key to show/hide it</li>
+            <li>add multiple selection in the picture listing pane</li>
+            <li>add the multiplex thumbnail generator algorithm</li>
+            <li>resolve wrong sorting issue of the thumbnails</li>
+            <li>tons of bug fixes</li>
+            <li>added/updated translations</li>
+          </ul>
+          <a href="download.html">Download it</a>
+          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-August/msg00056.html">full release notes</a>)
+
           <h3>August 5th 2008</h3>
           <p>
-          Unstable verson 2.23.6 was released!
-          New features since previous version include:
+          <b>Unstable</b>
+          version 2.23.6 was released!
+          New in this release
           </p>
           <ul>
             <li>add a fullscreen mode for kiosks</li>
@@ -153,8 +177,9 @@
 
           <h3>July 21st 2008</h3>
           <p>
-          Unstable verson 2.23.5 was released!
-          New features since previous version include:
+          <b>Unstable</b>
+          version 2.23.5 was released!
+          New in this release
           </p>
           <ul>
             <li>make recording of videos work again</li>
@@ -166,32 +191,6 @@
           </ul>
           <a href="download.html">Download it</a>
           (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-July/msg00041.html">full release notes</a>)
-
-          <h3>June 29th 2008</h3>
-          <p>
-          Stable verson 2.22.3 was released!
-          New features since previous stable version include:
-          </p>
-          <ul>
-            <li>cheese finally selects the right thumbnails for already taken photos</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download.html">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-May/msg00067.html">full release notes</a>)
-
-          <h3>June 16th 2008</h3>
-          <p>
-          Unstable verson 2.23.4 was released!
-          New features since previous version include:
-          </p>
-          <ul>
-            <li>fix a crash, when using about/quit menu items in hildon mode</li>
-            <li>Instead of crashing report when certain gstreamer are not found</li>
-            <li>use intltools 0.40 for building with autotools</li>
-            <li>added/updated translations</li>
-          </ul>
-          <a href="download.html">Download it</a>
-          (<a href="http://mail.gnome.org/archives/gnome-announce-list/2008-June/msg00043.html">full release notes</a>)
 
         </div>
       </div><!-- bottom -->
