@@ -1,3 +1,9 @@
+2008-08-18  daniel g. siegel <dgsiegel@gmail.com>
+
+	* www.gnome.org/projects/cheese/download.html,
+	  www.gnome.org/projects/cheese/index.html: 
+	  populate the cheese 2.23.90 release
+
 2008-08-16  daniel g. siegel <dgsiegel@gmail.com>
 
 	* www.gnome.org/projects/cheese/index.html: 
